# dr-argos

./: .gitignore  pyproject.toml
src/: main.py  utils.py
src/argos/: models.py  service.py
src/scraper/: camoufox.py  container.py  models.py  service.py
src/scraper/handlers/: aliexpress.py  amazon.py  auction.py  lv220.py  mercadolibre.py  okazii.py  pigu.py
src/scraper/handlers/core/: __init__.py  handler.py  router.py
src/scraper/pages/: aliexpress.py  amazon.py  auction.py  core.py  mercadolibre.py  okazii.py  pigu.py
tools/: get_listings.py  onebound.py  parse.py  transform.py  update.py  utils.py
